--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,8 @@ body, canvas {
 
 <body>
 <canvas id="canvas" width="100" height="100"></canvas>
-
+<!-- smoosh -->
 <script src="./bundle.js"></script>
+<!-- endsmoosh -->
 </body>
 </html>
