--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@ body, canvas {
 <body>
 <canvas id="canvas" width="100" height="100"></canvas>
 <!-- smoosh -->
-<script src="./bundle.js"></script>
+<script src="./js/bundle.js"></script>
 <!-- endsmoosh -->
 </body>
 </html>
